--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 input:
   attendance_path: "./data/attendance.csv" # 选课人员名单 csv 文件路径
-  questionnaire_path: "./data/questionnaire.csv" # 问卷 csv 文件路径
+  questionnaire_path: "./data/CUCACM积分系统信息收集表（收集结果）-CUCACM积分系统信息收集表（收集结果）.csv" # 问卷 csv 文件路径
 
 Logging: # logging 配置
   disable_existing_loggers: false
