完成昵称爬虫并入库

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
 input:
   attendance_path: "./data/attendance.csv" # 选课人员名单 csv 文件路径
   questionnaire_path: "./data/CUCACM积分系统信息收集表（收集结果）-CUCACM积分系统信息收集表（收集结果）.csv" # 问卷 csv 文件路径
+  using_nickname_cache: true
+
 
 Logging: # logging 配置
   disable_existing_loggers: false
