初步实现 VjudgeRankingItem 类（排名算法还有问题）

--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@ input:
   questionnaire_path: "./data/CUCACM积分系统信息收集表（收集结果）-CUCACM积分系统信息收集表（收集结果）.csv" # 问卷 csv 文件路径
   using_nickname_cache: true
 
+debug: true
 
 Logging: # logging 配置
   disable_existing_loggers: false
