--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,6 @@
+upsolve: # 补题
+  expiration: 7 # 以 `比赛结束` 开始计算的补题有效期，单位天
+
 input:
   attendance_path: "scoreanalysis/resources/attendance.csv" # 选课人员名单 csv 文件路径
   questionnaire_path: "scoreanalysis/resources/CUCACM积分系统信息收集表（收集结果）-CUCACM积分系统信息收集表（收集结果）.csv" # 问卷 csv 文件路径
