--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,23 @@
+# 总配置
 upsolve: # 补题
   expiration: 7 # 以 `比赛结束` 开始计算的补题有效期，单位天
+
+# 各个 OJ 的配置
+
+vjudge: # vjudge config
+  - # instance 1
+    enable: true # 是否启用此 instance
+    title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+
+  # - # instance 2（用于：同时在 Vjudge 上进行 div1 和 div 2 训练的情况）
+  #   title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+  #   enable: true # 是否启用 vjudge
+
+nowcoder: # 牛客 config
+  - # instance 1
+    enable: true # 是否启用此 instance
+    cookie: ""
+  -  # instance 2
 
 input:
   attendance_path: "scoreanalysis/resources/attendance.csv" # 选课人员名单 csv 文件路径
