--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,8 @@ upsolve: # 补题
 vjudge: # vjudge config
   - # instance 1
     enable: true # 是否启用此 instance
-    title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+    title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+    div: "div1" # div1 or div2, 没有组别可以为 ""
 
   # - # instance 2（用于：同时在 Vjudge 上进行 div1 和 div 2 训练的情况）
   #   title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
@@ -16,7 +17,9 @@ vjudge: # vjudge config
 nowcoder: # 牛客 config
   - # instance 1
     enable: true # 是否启用此 instance
+    title_prefix: ""
     cookie: ""
+    div: "div2" # div1 or div2, 没有组别可以为 ""
   -  # instance 2
 
 input:
