更新文件路径名

--- a/config.yaml
+++ b/config.yaml
@@ -23,8 +23,8 @@ nowcoder: # 牛客 config
   -  # instance 2
 
 input:
-  attendance_path: "scoreanalysis/resources/attendance.csv" # 选课人员名单 csv 文件路径
-  questionnaire_path: "scoreanalysis/resources/CUCACM积分系统信息收集表（收集结果）-CUCACM积分系统信息收集表（收集结果）.csv" # 问卷 csv 文件路径
+  attendance_path: "acmana/resources/attendance.csv" # 选课人员名单 csv 文件路径
+  questionnaire_path: "acmana/resources/CUCACM积分系统信息收集表（收集结果）-CUCACM积分系统信息收集表（收集结果）.csv" # 问卷 csv 文件路径
   using_nickname_cache: true
 
 debug_cache: true
