优化 vjudge & nowcoder instances config.yaml 配置

--- a/config.yaml
+++ b/config.yaml
@@ -5,22 +5,26 @@ upsolve: # 补题
 # 各个 OJ 的配置（将会用于实例化 ContestRetriever）
 
 vjudge: # vjudge config
-  - # instance 1
-    enable: true # 是否启用此 instance
-    title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
-    div: "div1" # div1 or div2, 没有组别可以为 ""
+  cookie: ""
+  instances:
+    - # instance 1
+      enable: true # 是否启用此 instance
+      title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+      div: "div1" # div1 or div2, 没有组别可以为 ""
 
-  # - # instance 2（用于：同时在 Vjudge 上进行 div1 和 div 2 训练的情况）
-  #   title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
-  #   enable: true # 是否启用 vjudge
+    # - # instance 2（用于：同时在 Vjudge 上进行 div1 和 div 2 训练的情况）
+    #   title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+    #   enable: true # 是否启用 vjudge
 
 nowcoder: # 牛客 config
-  - # instance 1
-    enable: true # 是否启用此 instance
-    title_prefix: ""
-    cookie: ""
-    div: "div2" # div1 or div2, 没有组别可以为 ""
-  -  # instance 2
+  cookie: ""
+  instances:
+    - # instance 1
+      enable: true # 是否启用此 instance
+      title_prefix: ""
+      cookie: ""
+      div: "div2" # div1 or div2, 没有组别可以为 ""
+    -  # instance 2
 
 input:
   attendance_path: "acmana/resources/attendance.csv" # 选课人员名单 csv 文件路径
