--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,32 @@
+aiofiles==23.2.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
+coloredlogs==15.0.1
+coverage==7.3.2
+et-xmlfile==1.1.0
+fake-useragent==1.3.0
+frozenlist==1.4.0
 greenlet==3.0.0
+humanfriendly==10.0
 idna==3.4
+Jinja2==3.1.2
 lxml==4.9.3
+MarkupSafe==2.1.3
+multidict==6.0.4
 numpy==1.26.1
+openpyxl==3.1.2
 pandas==2.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.22
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.6
+yarl==1.9.2
