--- a/.github/workflows/acmana_CI.yaml
+++ b/.github/workflows/acmana_CI.yaml
@@ -19,10 +19,10 @@ jobs:
         run:
           # 安装所需要的依赖
           pip3 install -r requirements.txt
-      - name: Coverage Test
+      - name: Coverage && Unit Test
         run:
           # 运行测试用例
-          coverage run --source=acweb test_acweb.py
+          coverage run -m unittest
       - name: Generate Report
         run:
           # 生成测试报告
