配置在 Github CICD 中的 python coverage 代码覆盖率测试只报告 acmana 项目中的代码

--- a/.github/workflows/acmana_CI.yaml
+++ b/.github/workflows/acmana_CI.yaml
@@ -24,7 +24,7 @@ jobs:
           VJUDGE_COOKIE: ${{ secrets.VJUDGE_COOKIE }}
         run:
           # 运行测试用例
-          coverage run -m unittest
+          coverage run --source=acmana -m unittest
       - name: Generate Report
         run:
           # 生成测试报告
