--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ vjudge: # vjudge config
       enable: true # 是否启用此 instance
       title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
       div: "div1" # div1 or div2, 没有组别可以为 ""
+      sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
 
     # - # instance 2（用于：同时在 Vjudge 上进行 div1 和 div 2 训练的情况）
     #   title: "CUC-ACM-2023秋季学期新生" # 检索用的标题
