完成 nowcoder/title_retriver.py 的比赛标题检索功能

--- a/config.yaml
+++ b/config.yaml
@@ -17,8 +17,8 @@ vjudge: # vjudge config
 
 nowcoder: # 牛客 config
   instances:
-    div1: # div1 类别
-      title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+    div2: # div1 类别
+      title_prefix: "CUC2023秋季新生训练第" # 检索用的标题
       sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
 
     # div2: # div2 类别
