add `github NOWCODER_COOKIE` Secrets and change `acmana_CI.yaml` to your own cookie

--- a/.github/workflows/acmana_CI.yaml
+++ b/.github/workflows/acmana_CI.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Coverage && Unit Test
         env:
           VJUDGE_COOKIE: ${{ secrets.VJUDGE_COOKIE }}
+          NOWCODER_COOKIE: ${{ secrets.NOWCODER_COOKIE }}
         run:
           # 运行测试用例
           coverage run --source=acmana -m unittest
