--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,8 @@ nowcoder: # 牛客 config
   instances:
     div2: # div1 类别
       title_prefix: "CUC2023秋季新生训练第" # 检索用的标题
-      sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
+      sheet_name_remover: "CUC2023秋季新生训练" # 用于去除 sheet name 中的前缀
+      export_filename: "CUC-ACM-2023秋季学期新生_Nowcoder_div2" # 导出的文件名前缀
 
     # div2: # div2 类别
     #   title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
