--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,28 @@ attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
 coloredlogs==15.0.1
+contourpy==1.1.1
 coverage==7.3.2
+cycler==0.12.1
 et-xmlfile==1.1.0
 fake-useragent==1.3.0
+fonttools==4.43.1
 frozenlist==1.4.0
 greenlet==3.0.0
 humanfriendly==10.0
 idna==3.4
 Jinja2==3.1.2
+kiwisolver==1.4.5
 lxml==4.9.3
 MarkupSafe==2.1.3
+matplotlib==3.8.0
 multidict==6.0.4
 numpy==1.26.1
 openpyxl==3.1.2
+packaging==23.2
 pandas==2.1.1
+Pillow==10.1.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -29,4 +37,5 @@ SQLAlchemy==2.0.22
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.6
+XlsxWriter==3.1.9
 yarl==1.9.2
