--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -12,11 +12,25 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v2
-      - name: Test txt
-        run: |
-          echo "test" > test.txt
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install Dependencies
+        run:
+          # 安装所需要的依赖
+          pip3 install -r requirements.txt
+
+      - name: Run acmana
+        env:
+          VJUDGE_COOKIE: ${{ secrets.VJUDGE_COOKIE }}
+          NOWCODER_COOKIE: ${{ secrets.NOWCODER_COOKIE }}
+        run: python -m acmana
+
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "test.txt"
+          artifacts: "outputs/*"
           #   bodyFile: "body.md"
           # token: ${{ secrets.YOUR_GITHUB_TOKEN }}
