新增导出 Excel 按照 Score 进行排名的配置功能

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
 # 总配置
-upsolve: # 补题
-  expiration: 7 # 以 `比赛结束` 开始计算的补题有效期，单位天
+common:
+  upsolve: # 补题
+    expiration: 7 # 以 `比赛结束` 开始计算的补题有效期，单位天
+    sort_by_score: true
 
 # 各个 OJ 的配置（将会用于实例化 ContestRetriever）
 
