--- a/config.yaml
+++ b/config.yaml
@@ -12,24 +12,24 @@ vjudge: # vjudge config
     #   title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
     #   sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
     #   export_filename: "CUC-ACM-2023-Autumn-Vjudge-div1" # 导出的文件名前缀
-    prophase: # 前期训练
-      title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
-      sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
-      export_filename: "CUC-ACM-2023-Autumn-Vjudge-prophase" # 导出的文件名前缀
+    basic: # 基础训练
+      title_prefix: "CUC-ACM-2023秋季学期新生基础练习" # 检索用的标题
+      sheet_name_remover: "CUC-ACM-2023秋季学期新生" # 用于去除 sheet name 中的前缀
+      export_filename: "CUC-ACM-2023-Autumn-Vjudge-Basic" # 导出的文件名前缀
     # div2: # div2 类别
     #   title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
     #   sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
 
 nowcoder: # 牛客 config
-  instances:
-    prophase: # div1 类别
-      title_prefix: "CUC2023秋季新生" # 检索用的标题
-      sheet_name_remover: "CUC2023秋季新生" # 用于去除 sheet name 中的前缀
-      export_filename: "CUC-ACM-2023-Autumn-Nowcoder-prophase" # 导出的文件名前缀
+  instances: []
+  # prophase: # div1 类别
+  #   title_prefix: "CUC2023秋季新生" # 检索用的标题
+  #   sheet_name_remover: "CUC2023秋季新生" # 用于去除 sheet name 中的前缀
+  #   export_filename: "CUC-ACM-2023-Autumn-Nowcoder-prophase" # 导出的文件名前缀
 
-    # div2: # div2 类别
-    #   title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
-    #   sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
+  # div2: # div2 类别
+  #   title_prefix: "CUC-ACM-2023秋季学期新生" # 检索用的标题
+  #   sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
 
 input:
   attendance_path: "acmana/resources/attendance.csv" # 选课人员名单 csv 文件路径
