--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -38,6 +38,15 @@ jobs:
           artifacts: "outputs/*"
           allowUpdates: true
           tag: "v0.0.9"
+          body: |
+            #### 类别
+            |  关键字  |  对应   |   比赛平台    |
+            | :------: | :-----: | :-----------: |
+            | prophase | 1~5 周  | 牛客 & Vjudge |
+            |  Basic   | 6~8 周  |    Vjudge     |
+            |   div1   | 9~16 周 |    Vjudge     |
+            |   div2   | 9~16 周 |    Vjudge     |
+
           # commit: true
           #   bodyFile: "body.md"
           # token: ${{ secrets.YOUR_GITHUB_TOKEN }}
