--- a/config.yaml
+++ b/config.yaml
@@ -19,12 +19,12 @@ vjudge: # vjudge config
       export_filename: "CUC-ACM-2023-Autumn-Vjudge-Basic" # 导出的文件名前缀
 
     div1: # 9~16 周的 div1 类别
-      title_prefix: "CUC-ACM-2023秋季学期新生div1" # 检索用的标题
+      title_prefix: "CUC-ACM-2023秋季学期新生练习-div1" # 检索用的标题
       sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
       export_filename: "CUC-ACM-2023-Autumn-Vjudge-div1" # 导出的文件名前缀
 
     div2: # 9~16 周 div2 类别
-      title_prefix: "CUC-ACM-2023秋季学期新生div2" # 检索用的标题
+      title_prefix: "CUC-ACM-2023秋季学期新生练习-div2" # 检索用的标题
       sheet_name_remover: "CUC-ACM-2023秋季学期" # 用于去除 sheet name 中的前缀
       export_filename: "CUC-ACM-2023-Autumn-Vjudge-div2" # 用于去除 sheet name 中的前缀
 
