--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -4,9 +4,9 @@ on:
   push:
     tags:
       - "*"
-  schedule:
-    - cron: "0 10 * * 3" # 北京时间 18 点
-    - cron: "0 10 * * 6"
+  # schedule:
+  #   - cron: "0 10 * * 3" # 北京时间 18 点
+  #   - cron: "0 10 * * 6"
   workflow_dispatch: # 手动触发
 
 jobs:
