寒假 Github action 每天晚上 6 点更新

--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -4,9 +4,10 @@ on:
   push:
     tags:
       - "*"
-  # schedule:
-  #   - cron: "0 10 * * 3" # 北京时间 18 点
-  #   - cron: "0 10 * * 6"
+  schedule:
+    # - cron: "0 10 * * 3" # 北京时间 18 点星期三
+    # - cron: "0 10 * * 6" # 北京时间 18 点星期六
+    - cron: "0 10 * * *"  # 每天 6 点
   workflow_dispatch: # 手动触发
 
 jobs:
